--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -6,13 +6,20 @@
     android:background="@color/black"
     android:keepScreenOn="true">
 
-    <androidx.media3.ui.PlayerView
-        android:id="@+id/exo_player_view"
+    <com.skit.mplex.view.PlayerViewParent
+        android:id="@+id/player_parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:focusable="true"
-        app:controller_layout_id="@layout/m_exo_styled_player_control_view"
-        app:player_layout_id="@layout/m_exo_styled_player_view"
-        app:show_shuffle_button="true"
-        app:show_subtitle_button="true" />
+        android:layout_height="match_parent">
+
+        <androidx.media3.ui.PlayerView
+            android:id="@+id/exo_player_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:focusable="true"
+            app:controller_layout_id="@layout/m_exo_styled_player_control_view"
+            app:player_layout_id="@layout/m_exo_styled_player_view"
+            app:show_shuffle_button="true"
+            app:show_subtitle_button="true" />
+    </com.skit.mplex.view.PlayerViewParent>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
