--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -26,4 +26,18 @@
             android:layout_height="match_parent" />
     </com.skit.mplex.view.PlayerViewParent>
 
+    <!--    <androidx.core.widget.NestedScrollView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:layout_margin="10dp"-->
+    <!--        android:background="#80000000">-->
+
+    <!--    </androidx.core.widget.NestedScrollView>-->
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textColor="#62FF00" />
 </FrameLayout>
