--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -9,7 +9,8 @@
     <com.skit.mplex.view.PlayerViewParent
         android:id="@+id/player_parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:focusable="false">
 
         <androidx.media3.ui.PlayerView
             android:id="@+id/exo_player_view"
@@ -18,8 +19,8 @@
             android:focusable="true"
             app:controller_layout_id="@layout/m_exo_styled_player_control_view"
             app:player_layout_id="@layout/m_exo_styled_player_view"
-            app:show_shuffle_button="true"
-            app:show_subtitle_button="true" />
+            app:show_shuffle_button="false"
+            app:show_subtitle_button="false" />
     </com.skit.mplex.view.PlayerViewParent>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
